name:                lucid-page
version:             0.1.0.0
license-file:        LICENSE
author:              Tony Day
maintainer:          tonyday567@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lucid.Page
                     , Lucid.Page.Css
                     , Lucid.Page.Js
                     , Lucid.Page.Server
                     , Lucid.Page.Html
                     , Lucid.Page.Types
                     , Lucid.Page.Render
                     , Language.Javascript.JMacro.Chain

  build-depends:       base >=4.7 && <4.8
                     , blaze-builder
                     , bytestring
                     , clay
                     , containers
                     , data-default
                     , happstack-server >= 7.3.9
                     , hjsmin
                     , jmacro
                     , language-javascript
                     , lens
                     , lucid
                     , mtl
                     , text
                     , transformers

  hs-source-dirs:      src      
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      test
  build-depends:       base >= 4 && < 5
                     , lucid-page
                     , blaze-builder
                     , bytestring
                     , clay
                     , containers
                     , data-default
                     , happstack-server >= 7.3.9
                     , hjsmin
                     , hspec
                     , jmacro
                     , language-javascript
                     , lens
                     , lucid
                     , mtl
                     , tasty
                     , tasty-hspec
                     , text
                     , transformers
