name: lucid-page
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Tony Day <tonyday567@gmail.com>
bug-reports: https://github.com/tonyday567/lucid-page/issues
synopsis: Haskell project lucid-page repo 
description: <https://github.com/tonyday567/lucid-page>
extra-source-files:
    README.md

library
  exposed-modules:     Lucid.Page
                     , Lucid.Page.Css
                     , Lucid.Page.Js
                     , Lucid.Page.Server
                     , Lucid.Page.Html
                     , Lucid.Page.Types
                     , Lucid.Page.Render
                     , Language.Javascript.JMacro.Chain

  build-depends:       base
                     , HTTP
                     , blaze-builder
                     , bytestring
                     , clay
                     , containers
                     , data-default
                     , happstack-server
                     , hjsmin
                     , jmacro
                     , language-javascript
                     , lens
                     , lucid
                     , mtl
                     , mvc-extended
                     , text
                     , transformers
                     , blaze-html

  hs-source-dirs:      src      
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src, test
  build-depends:       base >= 4 && < 5
                     , HTTP
                     , lucid-page
                     , blaze-builder
                     , bytestring
                     , clay
                     , containers
                     , data-default
                     , happstack-server
                     , hjsmin
                     , hspec
                     , jmacro
                     , language-javascript
                     , lens
                     , lucid
                     , mtl
                     , mvc-extended
                     , tasty
                     , tasty-hspec
                     , text
                     , transformers
                     -- extras
                     , http-client
                     , pipes
                     , pipes-http
                     , pipes-extended
                     , pipes-bytestring
                     , blaze-html
